v1.0.1 - Not yet released
 - No changes yet!

v1.0.0 - 15/06/2013
 - Initial release
